[package]
edition = "2021"
name = "subotai"
version = "1.0.4-pre"
authors = ["PabloMansanet <pablomansanet@gmail.com>"]
description = "Kademlia based DHT"
repository = "https://github.com/PabloMansanet/subotai"
readme = "README.md"
keywords = ["kademlia", "DHT", "p2p", "kad", "network"]
documentation = "https://PabloMansanet.github.io/subotai/subotai"
license = "MIT"

[dependencies]
itertools = "0.13.0"
rand = "0.9.0-alpha.2"
bincode = "1.3.3"
serde = { version = "1.0.215", features = ["derive", "rc"] }
bus = "2.4.1"
chrono = { version = "0.4.38", features = ["serde"] }
sha1 = "0.11.0-pre.4"
